# theory

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  check-links.py  formula.bld  intelligence.bld  links.toml  principles.bld  questions.bld  theory.bld
docs/: README.md  glossary.md  omg.md
domains/: circuits.bld  cosmology.bld  gpu.bld  index.bld  neural.bld  vi.bld  (+4 more)
tools/: .flake8  README.md  pyproject.toml
tools/src/tools/: __init__.py  benchmark.py  bld.py  check_links.py  factoring.py  quantum.py  test_controlled_observer.py  test_math_verification.py  test_physical_measurement.py  test_selection_rule.py  verify_entanglement.py  verify_math.py  verify_observer.py  verify_phase_transition.py  verify_physical.py  verify_predictions.py  verify_selection.py
tools/tests/: conftest.py  helpers.py  test_algebra.py  test_classical.py  test_collapse.py  test_controlled_observer.py  test_cosmology.py  test_electroweak.py  test_entanglement.py  test_eom_forces.py  test_eom_generation.py  test_eom_geodesic.py  test_eom_hypercharge.py  test_eom_killing.py  test_eom_pathintegral.py  test_eom_representations.py  test_eom_rg.py  test_eom_subalgebra.py  test_eom_weak.py  test_equation_of_motion.py  test_extraction.py  test_integer_factoring.py  test_integration.py  test_kx_corrections.py  test_math_verification.py  test_neutrino_masses.py  test_phase_transition.py  test_physical_measurement.py  test_predictions.py  test_quantum.py  test_quark_masses.py  test_selection_rule.py  test_structure.py  test_validation.py
tools/tests/fixtures/: all_link_types.md  other.md
(+315 files in other folders)
