[project]
name = "theory-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
check-links = "tools.check_links:main"
benchmark = "tools.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
